Fix navbar width on mobile

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -43,8 +43,8 @@
 @media (max-width: 600px) {
   .primary-navigation {
     position: fixed;
-    inset: 0 0 0 30%;
-    height: 60vh;
+    inset: 0 0 0 40%;
+    height: 55vh;
     border: 1px solid var(--primary-color);
     border-right: none;
     border-radius: 1rem 0 0 1rem;
